[project]
name = "ml-serving-from-scratch"
version = "0.1.0"
description = "Toy project implementing ML serving stack"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "fastapi[cli,standard]>=0.133.0",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
